<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_data_diri"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/tvjd"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama"
        android:ems="15"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:layout_below="@+id/tvjd"
        android:layout_marginTop="15dp"
        android:id="@+id/etnm"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:nextFocusDown="@id/etps"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_tanggal_lahir"
        android:ems="15"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:inputType="date"
        android:layout_below="@+id/etnm"
        android:layout_marginTop="15dp"
        android:id="@+id/etps"
        android:autofillHints=""
        android:gravity="center_horizontal"
        android:nextFocusDown="@id/etem"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_tempat_lahir"
        android:ems="15"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:layout_below="@+id/etps"
        android:layout_marginTop="15dp"
        android:id="@+id/etem"
        android:autofillHints=""
        android:gravity="center_horizontal"/>




    <Button
        android:layout_width="wrap_content"
        android:width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etps"
        android:layout_marginTop="75dp"
        android:onClick="submit_data"
        />



</RelativeLayout>